--- a/página web/index.html
+++ b/página web/index.html
@@ -1,72 +1,66 @@
+
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #4CAF50;
-            overflow: hidden;
-        }
-
-        nav a {
-            float: left;
-            display: block;
-            color: #fff;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-
-    <header>
-        <h1>Mi Página Web</h1>
-    </header>
-
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Horario</a>
-    </nav>
-
-    <div>
-        <!-- Contenido de la página va aquí -->
-        <p>¡Bienvenido a mi página web!</p>
-    </div>
-
-    <footer>
-        Desarrollado por IES Pablo Picasso
-    </footer>
-
-</body>
+<html>
+    
+    <head>
+        <link rel="stylesheet" href="./style/hoja_de_estilo.css"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
+    </head>
+    <body class="gif">
+        <h1>Horario De Clases</h1> 
+        <table >
+          <tr>
+            <th class="temas">HORA</th>
+            <th class="temas">LUNES</th>
+            <th class="temas">MARTES</th>
+            <th class="temas">MIÉRCOLES</th>
+            <th class="temas">JUEVES</th>
+            <th class="temas">VIERNES</th>
+          </tr> 
+          <tr>
+            <td class="temas">8:15 9:15</td>              
+            <td class="entorno">Entorno de desarrollo</td>            
+            <td class="fol">FOL</td>              
+            <td class="entorno" rowspan="2">Entorno de desarrollo</td>              
+            <td class="fol" rowspan="2">FOL</td>              
+            <td class="base" rowspan="2">Bases de datos</td>
+          </tr> 
+          <tr>
+            <td class="temas">9:15 10:15</td>             
+            <td class="programación"rowspan="2">Programación</td>           
+            <td class="sistemas" rowspan="2">Sistemas informáticos</td>             
+            
+          </tr> 
+          <tr>
+            <td class="temas">10:15 11:15</td>                       
+            <td class="sistemas">Sistemas informáticos</td>              
+            <td class="base">Bases de datos</td>             
+            <td class="sistemas">Sistemas informáticos</td>
+          </tr>
+            <td class="temas">11:15 11:45</td> 
+            <td colspan="5" id="rec"> RECREO</td>
+          <tr>
+            <td class="temas">11:45 12:45</td>              
+            <td class="base" rowspan="2">Bases de datos</td>             
+            <td class="programación"rowspan="3">Programación</td>            
+            <td class="sistemas">Sistemas informáticos</td>       
+            <td class="base">Bases de datos</td>          
+            <td class="sistemas">Sistemas informáticos</td>
+          </tr> 
+          <tr>
+            <td class="temas">12:45 13:45</td>                  
+            <td class="lenguaje"rowspan="2">Lenguaje de marcas</td>            
+            <td class="programación"rowspan="2">Programación</td>
+            <td class="lenguaje">Lenguaje de marcas</td>
+          </tr> 
+          <tr>
+            <td class="temas">13:45 14:45</td>
+            <td class="lenguaje">Lenguaje de marcas</td>                         
+            <td class="programación">Programación</td>
+          </tr> 
+        </table>
+    </body>
+  
 </html>
