Se ha añadido el sobre mi

--- a/página web/index3.html
+++ b/página web/index3.html
@@ -55,14 +55,18 @@
     </header>
 
     <nav>
-        <a href="#">Inicio</a>
-        <a href="./index.html">Horario</a>
-        <a href="./index3.html">Sobre mi</a>
+        <nav>
+            <a href="./index2.html">Inicio</a>
+            <a href="./index.html">Horario</a>
+            <a href="#">Sobre mi</a>
+        </nav>
     </nav>
 
     <div>
-        <!-- Contenido de la página va aquí -->
-        <p>¡Bienvenido a mi página web!</p>
+        <h1>Sobre mi</h1>
+        <h3>Mi nombre es Miguel Antonio Peraza </h3>
+        <h4>Nací en Caracas, Venezuela en 2005</h4>
+        <h5>algunas de las cosas que me gustan son el fútbol, las series, la música y el gym</h5>
     </div>
 
     <footer>
