--- a/página web/index.html
+++ b/página web/index.html
@@ -60,8 +60,7 @@
     </nav>
 
     <div>
-        <!-- Contenido de la página va aquí -->
-        <p>¡Bienvenido a mi página web!</p>
+        <p>Página web en desarrollo</p>
     </div>
 
     <footer>
