Añado foto a la página en la rama desarrollo

--- a/página web/index2.html
+++ b/página web/index2.html
@@ -60,8 +60,7 @@
     </nav>
 
     <div>
-        <!-- Contenido de la página va aquí -->
-        <p>¡Bienvenido a mi página web!</p>
+        <img src="./image/descarga.jpg" >
     </div>
 
     <footer>
