--- a/página web/index2.html
+++ b/página web/index2.html
@@ -64,6 +64,14 @@
     <div>
         <img src="./image/descarga.jpg" >
     </div>
+    <p>
+        Estimada comunidad educativa,
+        Quiero daros la bienvenida a la página web del Instituto de Enseñanza Secundaria Pablo Picasso de Málaga.
+        <br></br>
+        Fundado en 1978, nuestro Centro, ligado profundamente a la historia del barrio de Nueva Málaga y sus gentes, ha dedicado décadas a la educación de agentes activos de nuestra sociedad, gracias a un equipo docente y una Comunidad Educativa comprometidos.
+        <br></br>
+        En la actualidad, el IES Pablo Picasso acoge en torno a 800 alumnos escolarizados desde 1º de Educación Secundaria Obligatoria hasta 2º de Bachillerato, además de los grupos de Enseñanzas Profesionales de Técnico en Sistemas Microinformáticos y Redes y de Técnico Superior de Desarrollo de Aplicaciones Multiplataforma, ambos en modalidades ordinaria y Dual.
+    </p>
 
     <footer>
         Desarrollado por IES Pablo Picasso
